# selfheal-rl

./: .gitignore  Dockerfile  README.md  config.py  eval_final.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run.py  run_training.py
core/: __init__.py  graders.py  llm_scorer.py  metrics.py  reward.py  tasks.py
env/: __init__.py  cascade_simulator.py  failure_engine.py  observations.py  selfheal_env.py  service_mesh.py
server/: app.py
training/: callbacks.py  evaluate.py  train.py
ui/: app.py  replay.py  visualizer.py
